[package]
description = "Katana execution engine. This crate provides implementations for executing transactions."
edition.workspace = true
name = "katana-executor"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-primitives = { path = "../primitives" }
katana-provider = { path = "../storage/provider" }

anyhow.workspace = true
convert_case.workspace = true
parking_lot.workspace = true
starknet.workspace = true
tracing.workspace = true

# blockifier deps
blockifier = { workspace = true, optional = true }
starknet_api.workspace = true
tokio.workspace = true

# starknet_in_rust deps
serde_json = { workspace = true, features = [ "arbitrary_precision", "raw_value" ], optional = true }
starknet_in_rust = { git = "https://github.com/lambdaclass/starknet_in_rust", version = "0.4.0", optional = true }

[features]
default = [ "blockifier" ]

blockifier = [ "dep:blockifier" ]
starknet_in_rust = [ "starknet_in_rust/cairo-native" ]
